--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>com.google.maps</groupId>
+			<artifactId>google-maps-services</artifactId>
+			<version>2.2.0</version> </dependency>
+
 	</dependencies>
+
 
 	<build>
 		<plugins>
